--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
         <% }else { %>
             <div id="main2">
             <form id="myForm" method="get">
-            <button id="get" class="btn btn-light" type="submit"  formaction="/get-image">Get NASA image of the day</button>
+            <button id="get" class="btn btn-dark" type="submit"  formaction="/get-image">Get NASA image of the day</button>
             <% } %>
             </form>
             </div></div>
